# users-video-storage

./: .env.dist  .gitignore  README.md  pyproject.toml  run_gunicorn.sh
api/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tokens.py  views.py
api/migrations/: 0001_initial.py
api/templates/: verify_email.html
backend/: celery.py  settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.scss  index.css
frontend/src/endpoints/: home.jsx  login.jsx  logout.jsx  profile.jsx  self_profile.jsx  signup.jsx  users.jsx  video.jsx
frontend/src/endpoints/components/: banner.jsx  comments.jsx  form_comments.jsx
media/video_storage/: IMG_1297.MOV
